@@ -48,6 +48,8 @@ public:
 	void print_hc(int x, int y, const string& text, color col = color(255,255,255), bool with_shadow = false) const;
 	void print_vc(int x, int y, const string& text, color col = color(255,255,255), bool with_shadow = false) const;
 	void print_c(int x, int y, const string& text, color col = color(255,255,255), bool with_shadow = false) const;
+	// print text with wrap around, use lineheight 0 for automatic line height
+	void print_wrapped(int x, int y, unsigned w, unsigned lineheight, const string& text, color col = color(255,255,255), bool with_shadow = false) const;
 	pair<unsigned, unsigned> get_size(const string& text) const;
 	unsigned get_height(void) const { return char_height; };
 };
