@@ -377,91 +377,6 @@ void system::screenshot(void)
 	add_console(string("screenshot taken as ")+os.str());
 }
 
-// draw_image
-void system::draw_image(int x, int y, const texture* t) const
-{
-	draw_image(x, y, t->get_width(), t->get_height(), t);
-}
-
-void system::draw_hm_image(int x, int y, const texture* t) const
-{
-	draw_hm_image(x, y, t->get_width(), t->get_height(), t);
-}
-
-void system::draw_vm_image(int x, int y, const texture* t) const
-{
-	draw_vm_image(x, y, t->get_width(), t->get_height(), t);
-}
-
-void system::draw_image(int x, int y, int w, int h, const texture* t) const
-{
-	glBindTexture(GL_TEXTURE_2D, t->get_opengl_name());
-	glBegin(GL_QUADS);
-	glTexCoord2i(0,0);
-	glVertex2i(x,y);
-	glTexCoord2i(0,1);
-	glVertex2i(x,y+h);
-	glTexCoord2i(1,1);
-	glVertex2i(x+w,y+h);
-	glTexCoord2i(1,0);
-	glVertex2i(x+w,y);
-	glEnd();
-}
-
-void system::draw_hm_image(int x, int y, int w, int h, const texture* t) const
-{
-	glBindTexture(GL_TEXTURE_2D, t->get_opengl_name());
-	glBegin(GL_QUADS);
-	glTexCoord2i(1,0);
-	glVertex2i(x,y);
-	glTexCoord2i(1,1);
-	glVertex2i(x,y+h);
-	glTexCoord2i(0,1);
-	glVertex2i(x+w,y+h);
-	glTexCoord2i(0,0);
-	glVertex2i(x+w,y);
-	glEnd();
-}
-
-void system::draw_vm_image(int x, int y, int w, int h, const texture* t) const
-{
-	glBindTexture(GL_TEXTURE_2D, t->get_opengl_name());
-	glBegin(GL_QUADS);
-	glTexCoord2i(0,1);
-	glVertex2i(x,y);
-	glTexCoord2i(0,0);
-	glVertex2i(x,y+h);
-	glTexCoord2i(1,0);
-	glVertex2i(x+w,y+h);
-	glTexCoord2i(1,1);
-	glVertex2i(x+w,y);
-	glEnd();
-}
-
-void system::draw_rot_image(int x, int y, double angle, const texture* t) const
-{
-	glPushMatrix();
-	glTranslatef(x, y, 0);
-	glRotatef(angle, 0, 0, 1);
-	draw_image(-int(t->get_width())/2, -int(t->get_height())/2, t);
-	glPopMatrix();
-}
-
-void system::draw_tiles(int x, int y, int w, int h, unsigned tilesx, unsigned tilesy, const texture* t) const
-{
-	glBindTexture(GL_TEXTURE_2D, t->get_opengl_name());
-	glBegin(GL_QUADS);
-	glTexCoord2i(0,0);
-	glVertex2i(0,0);
-	glTexCoord2i(0,tilesy);
-	glVertex2i(0,h);
-	glTexCoord2i(tilesx,tilesy);
-	glVertex2i(w,h);
-	glTexCoord2i(tilesx,0);
-	glVertex2i(w,0);
-	glEnd();
-}
-
 void system::draw_rectangle(int x, int y, int w, int h)
 {
 /*
